[package]
name = "roguelike"
version = "0.1.0"
authors = ["jagr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies]
rand = "0.8.4"
